crates/apollo-compiler/test_data/diagnostics/0041_subscription_operation_with_undefined_fields.txt
Error: cannot query field `undefinedSubscriptionField` on type `Subscription`
   ╭─[0041_subscription_operation_with_undefined_fields.graphql:2:3]
   │
 2 │       undefinedSubscriptionField
   │       ─────────────┬────────────  
   │                    ╰────────────── `undefinedSubscriptionField` field is not defined
   │ 
 5 │ ╭─▶ type Subscription {
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── `Subscription` declared here
   │     
   │     Help: `undefinedSubscriptionField` is not defined on `Subscription` type
───╯

